--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Casaca | Page Product </title>
+    <title> Casaca | Page Contact</title>
     <meta name=description content=""/>
     <meta name=keywords content=""/>
     <meta name=title content=""/>
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div id="main" class="">
-        <div id="page_home" class="page_main">
+        <div id="page_contact" class="page_main">
         
 
 <header id="header" class="header">
@@ -90,161 +90,52 @@
             </div>
         </div>
     </div>
-</header>        <div class="banner">
-    <div class="banner_inner">
-        <a href="#">
-            <img src="http://via.placeholder.com/1920x700" alt=""/>
-        </a>
-    </div>
-</div>        <div class="page_body">
+</header>        <div class="page_body">
             <div class="container">
-                <div class="product_collection">
-                    <div class="row product_collection__row">
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                            </div>
-                </div>
+                <div class="contact_container">
+                    <h2 class="contact_title">C O N T A C T   U S</h2>
+                    <div class="contact_summary">
+                        <p>
+                            Contact us with any queries or questions you may have and we will get back to you as soon as possible (usually within 1 working day). Please note our studio is closed over the weekend.
+                        </p>
 
-                <hr/>
+                        <p>
+                            If you would like to visit our workshop please get in touch so we can arrange a suitable day and time - we look forward to meeting you!
+                        </p>
 
-                <div class="home_blog">
-    <div class="row home_blog__row">
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
+                        <div>
+                            <a href="mailto:Email: casaca.vn@gmail.com">Email: casaca.vn@gmail.com</a>
+                        </div>
+                        <form class="contact_frm">
+                            <div class="contact_frm__title">
+                                Get in touch
+                            </div>
+                            <div class="contact_frm__row">
+                                <label for="">Name *</label>
+                                <input type="text" class="input_common input_common--full contact_frm__input">
+                            </div>
+                            <div class="contact_frm__row">
+                                <label for="">Name *</label>
+                                <input type="text" class="input_common input_common--full contact_frm__input">
+                            </div>
+                            <div class="contact_frm__row">
+                                <label for="">Email *</label>
+                                <input type="text" class="input_common input_common--full contact_frm__input">
+                            </div>
+                            <div class="contact_frm__row">
+                                <label for="">Phone number</label>
+                                <input type="text" class="input_common input_common--full contact_frm__input">
+                            </div>
+                            <div class="contact_frm__row">
+                                <label for="">Message</label>
+                                <textarea col="5" class="input_common input_common--full contact_frm__input"></textarea>
+                            </div>
+                            <div class="contact_frm__row">
+                                <button type="submit" class="contact_frm__submit"></button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </div>
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
-                </div>
-            </div>
-        </div>
-            </div>
-</div>
             </div>
         </div>
         
