--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Casaca | Page Product </title>
+    <title> Casaca | Page About Us</title>
     <meta name=description content=""/>
     <meta name=keywords content=""/>
     <meta name=title content=""/>
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div id="main" class="">
-        <div id="page_home" class="page_main">
+        <div id="page_about_us" class="page_main">
         
 
 <header id="header" class="header">
@@ -90,161 +90,37 @@
             </div>
         </div>
     </div>
-</header>        <div class="banner">
-    <div class="banner_inner">
-        <a href="#">
-            <img src="http://via.placeholder.com/1920x700" alt=""/>
-        </a>
-    </div>
-</div>        <div class="page_body">
+</header>        <div class="page_body">
             <div class="container">
-                <div class="product_collection">
-                    <div class="row product_collection__row">
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                            </div>
-                </div>
+                <div class="about_us__container">
+                    <article class="about_us__data">
+                        <h4 class="about_us__title">US STORY</h4>
+                        <div class="about_us__content">
+                            <p>
+                                In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
+                                the Carpenter’s House.
+                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                            </p>
+                            <p>
+                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                            </p>
+                        </div>
+                    </article>
+                    <article class="about_us__data">
+                        <h4 class="about_us__title">THE TEAM</h4>
+                        <div class="about_us__content">
+                            <p>
+                                In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
+                                the Carpenter’s House.
+                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                            </p>
+                            <p>
+                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                            </p>
+                        </div>
 
-                <hr/>
-
-                <div class="home_blog">
-    <div class="row home_blog__row">
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
+                    </article>
                 </div>
-            </div>
-        </div>
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
-                </div>
-            </div>
-        </div>
-            </div>
-</div>
             </div>
         </div>
         
