--- a/activiti.html
+++ b/activiti.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Casaca | Page Product </title>
+    <title> Casaca | Page Activities</title>
     <meta name=description content=""/>
     <meta name=keywords content=""/>
     <meta name=title content=""/>
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div id="main" class="">
-        <div id="page_home" class="page_main">
+        <div id="page_activiti" class="page_main">
         
 
 <header id="header" class="header">
@@ -98,153 +98,73 @@
     </div>
 </div>        <div class="page_body">
             <div class="container">
-                <div class="product_collection">
-                    <div class="row product_collection__row">
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
-                                                <div class="col-md-3 product_collection__col">
-                            <div class="product_item">
-    <a href="#" title="" class="product_item__thumb">
-        <img src="http://via.placeholder.com/300x400" alt=""/>
-    </a>
-    <div class="product_item__info">
-        <h3 class="product_item__name">
-            <a title="" href="#">Bàn dã ngoại  - C01</a>
-        </h3>
-        <div class="product_item__price">
-            2.500.000 VNĐ
-        </div>
-    </div>
-</div>                        </div>
+                <div class="page_title">
+                    <span>ACTIVITIES</span>
+                </div>
+                <div class="activiti_group">
+                                        <div class="row activiti_thumbs">
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
                                             </div>
-                </div>
-
-                <hr/>
-
-                <div class="home_blog">
-    <div class="row home_blog__row">
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
-                </div>
-            </div>
-        </div>
-                <div class="col-md-6 home_blog__col">
-            <div class="blog_item">
-                <a href="#" class="blog_item__thumb">
-                    <img src="http://via.placeholder.com/720x480" alt=""/>
-                </a>
-                <div class="blog_item__info">
-                    <h3 class="blog_item__title">
-                        <a href="#" title="">HOẠT ĐỘNG KẾT NỐI</a>
-                    </h3>
-                </div>
-            </div>
-        </div>
-            </div>
-</div>
+                    <div class="activiti_summary">Workshop cùng bé làm búp bê gỗ</div>
+                                        <div class="row activiti_thumbs">
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                                    <div class="col-md-3 activiti_item">
+                                <div class="activiti_thumbs">
+                                    <a href="#" title="">
+                                        <img src="http://via.placeholder.com/340x230" alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                                            </div>
+                    <div class="activiti_summary">Workshop cùng bé làm búp bê gỗ</div>
+                                    </div>
             </div>
         </div>
         
