--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
         <div class="row">
             <div class="col-8 col-lg-3 header_col header_col__left">
                 <!--Logo-->
-                <h1 class="logo">
+                <h1 id="logo">
                     <a href="#" rel="home">
-                        <img src="" alt=""/>
+                        <img src="../../image/logo.svg" alt=""/>
                     </a>
-                    <p class="site_description">Chuyên may đo đồng phục</p>
+                    <span class="site_description">Chuyên may đo đồng phục</span>
                 </h1>
                 <!--//Logo-->
             </div>
@@ -59,11 +59,17 @@
                     <nav id="site-navigation" class="navigation_main">
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
-                                                                <li>
-                                    <a href="#" title="Đặt nhanh">Đặt nhanh</a>
+                                <li>
+                                    <a href="#" title="SHOP">Tin tức</a>
+                                    <ul class="sub_menu">
+                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                            </ul>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Tin tức">Tin tức</a>
+                                    <a href="#" title="Đặt nhanh">Đặt nhanh</a>
                                 </li>
                                                                 <li>
                                     <a href="#" title="Thông báo">Thông báo</a>
@@ -130,14 +136,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="subcribe">
-                    <div class="">Mailing List</div>
-                    <form action="" class="subcribe_frm">
-                        <input type="text"/>
-                        <button class="">Sign</button>
-                    </form>
-                    <div class="">Sign up to get the latest on sales, new releases and more …</div>
-                </div>
-            </div>
+    <div class="mb5">Mailing List</div>
+    <form action="" class="subcribe_frm">
+        <div class="subcribe_frm__row">
+            <input type="text" class="input_common input_common--full subcribe_frm__input" placeholder="Enter your email address..."/>
+            <button class="subcribe_frm__submit">Sign In</button>
+        </div>
+    </form>
+    <div class="subcribe_frm__note">Sign up to get the latest on sales, new releases and more …</div>
+</div>            </div>
             <div class="col-md-2">
                 <div class="footer_menu">
                                         <div class="footer_menu__item">
