--- a/product-detail.html
+++ b/product-detail.html
@@ -204,7 +204,7 @@
 <div id="footer">
     <div class="container footer_container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12 col-lg-6">
                 <div class="subcribe">
     <div class="mb5">Mailing List</div>
     <form action="" class="subcribe_frm">
@@ -215,7 +215,7 @@
     </form>
     <div class="subcribe_frm__note">Sign up to get the latest on sales, new releases and more …</div>
 </div>            </div>
-            <div class="col-md-2">
+            <div class="col-md-4 col-lg-2">
                 <div class="footer_menu">
                                         <div class="footer_menu__item">
                         <a href="#" title="Our Products">Our Products</a>
@@ -231,21 +231,23 @@
                     </div>
                                     </div>
             </div>
-            <div class="col-md-2">
-                                    <div class="footer_menu__item">
-                        <a href="#" title="Our Services">Our Services</a>
-                    </div>
-                                    <div class="footer_menu__item">
-                        <a href="#" title="About Casaca">About Casaca</a>
-                    </div>
-                                    <div class="footer_menu__item">
-                        <a href="#" title="Contact Us">Contact Us</a>
-                    </div>
-                                    <div class="footer_menu__item">
-                        <a href="#" title="Blog">Blog</a>
-                    </div>
-                            </div>
-            <div class="col-md-2">
+            <div class="col-md-4 col-lg-2">
+                <div class="footer_menu">
+                                            <div class="footer_menu__item">
+                            <a href="#" title="Our Services">Our Services</a>
+                        </div>
+                                            <div class="footer_menu__item">
+                            <a href="#" title="About Casaca">About Casaca</a>
+                        </div>
+                                            <div class="footer_menu__item">
+                            <a href="#" title="Contact Us">Contact Us</a>
+                        </div>
+                                            <div class="footer_menu__item">
+                            <a href="#" title="Blog">Blog</a>
+                        </div>
+                                    </div>
+            </div>
+            <div class="col-md-4 col-lg-2">
                 <div class="footer_social">
                     <div>Social</div>
                     <div class="footer_social__lst">
