--- a/product-detail.html
+++ b/product-detail.html
@@ -37,7 +37,8 @@
 </head>
 <body>
 <div id="main" class="">
-        <div id="page_product_detail" class="page_main">
+    
+    <div id="page_product_detail" class="page_main">
         
 
 <header id="header" class="header">
@@ -96,21 +97,49 @@
             </div>
         </div>
     </div>
-</header>        <div class="banner">
-    <div class="banner_inner">
-        <a href="#" title="">
-            <img src="http://via.placeholder.com/1920x700" alt=""/>
-        </a>
-    </div>
-</div>        <div class="page_body">
+</header>        <div class="page_body">
             <div class="container">
                 <div class="product_detail__container">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="product_gallery">
-
-                            </div>
-                        </div>
+    <!-- Swiper -->
+    <div class="swiper-container gallery-top">
+        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                    </div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next swiper-button-white"></div>
+        <div class="swiper-button-prev swiper-button-white"></div>
+    </div>
+    <div class="swiper-container gallery-thumbs">
+        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                            <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+                    </div>
+    </div>
+</div>                        </div>
                         <div class="col-md-6">
                             <div class="product_detail__box">
                                 <h1 class="product_detail__name">
@@ -138,7 +167,7 @@
                     </div>
                     <div class="product_collection">
                         <div class="row product_collection__row">
-                                                            <div class="col-md-3 product_collection__col">
+                                                            <div class="col-6 col-md-3 product_collection__col">
                                     <div class="product_item">
     <a href="#" title="" class="product_item__thumb">
         <img src="http://via.placeholder.com/300x400" alt=""/>
@@ -152,7 +181,7 @@
         </div>
     </div>
 </div>                                </div>
-                                                            <div class="col-md-3 product_collection__col">
+                                                            <div class="col-6 col-md-3 product_collection__col">
                                     <div class="product_item">
     <a href="#" title="" class="product_item__thumb">
         <img src="http://via.placeholder.com/300x400" alt=""/>
@@ -166,7 +195,7 @@
         </div>
     </div>
 </div>                                </div>
-                                                            <div class="col-md-3 product_collection__col">
+                                                            <div class="col-6 col-md-3 product_collection__col">
                                     <div class="product_item">
     <a href="#" title="" class="product_item__thumb">
         <img src="http://via.placeholder.com/300x400" alt=""/>
@@ -180,7 +209,7 @@
         </div>
     </div>
 </div>                                </div>
-                                                            <div class="col-md-3 product_collection__col">
+                                                            <div class="col-6 col-md-3 product_collection__col">
                                     <div class="product_item">
     <a href="#" title="" class="product_item__thumb">
         <img src="http://via.placeholder.com/300x400" alt=""/>
