--- a/product-detail.html
+++ b/product-detail.html
@@ -61,7 +61,7 @@
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
                                 <li>
-                                    <a href="#" title="SHOP">Tin tức</a>
+                                    <a href="#" title="SHOP">SHOP</a>
                                     <ul class="sub_menu">
                                                                                 <li class="has_children"><a title="" href="#">Menu level 1</a></li>
                                                                                 <li class="has_children"><a title="" href="#">Menu level 1</a></li>
@@ -70,19 +70,22 @@
                                                                             </ul>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Đặt nhanh">Đặt nhanh</a>
+                                    <a href="#" title="HOME">HOME</a>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Thông báo">Thông báo</a>
+                                    <a href="#" title="SHOP">SHOP</a>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Đấu giá">Đấu giá</a>
+                                    <a href="#" title="ACTIVITIES">ACTIVITIES</a>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Giỏ hàng">Giỏ hàng</a>
+                                    <a href="#" title="BLOG">BLOG</a>
                                 </li>
                                                                 <li>
-                                    <a href="#" title="Nhắn tin">Nhắn tin</a>
+                                    <a href="#" title="ABOUT">ABOUT</a>
+                                </li>
+                                                                <li>
+                                    <a href="#" title="CONTACT">CONTACT</a>
                                 </li>
                                                             </div>
                         </div>
@@ -277,9 +280,14 @@
             </div>
             <div class="col-md-4 col-lg-2">
                 <div class="footer_social">
-                    <div>Social</div>
+                    <div class="mb5">Social</div>
                     <div class="footer_social__lst">
-                        <a href="#" class="footer_social__item"></a>
+                        <a href="#" class="footer_social__item">
+                            <svg><use xlink:href="/image/sprite.svg#icon-pinterest"></use></svg>
+                        </a>
+                        <a href="#" class="footer_social__item">
+                            <svg><use xlink:href="/image/sprite.svg#icon-youtube"></use></svg>
+                        </a>
                     </div>
                 </div>
 
