--- a/activiti.html
+++ b/activiti.html
@@ -59,13 +59,13 @@
                     <nav id="site-navigation" class="navigation_main">
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
-                                <li>
-                                    <a href="#" title="SHOP">SHOP</a>
+                                <li class="has_children">
+                                    <a href="#" title="SHOP">MENU</a>
                                     <ul class="sub_menu">
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
                                                                             </ul>
                                 </li>
                                                                 <li>
@@ -108,22 +108,22 @@
                     <div class="block_body">
                                                 <div class="activiti_group">
                             <div class="row activiti_row">
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
@@ -133,22 +133,22 @@
                         </div>
                                                 <div class="activiti_group">
                             <div class="row activiti_row">
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
                                     </div>
-                                                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
