--- a/product-detail.html
+++ b/product-detail.html
@@ -60,13 +60,13 @@
                     <nav id="site-navigation" class="navigation_main">
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
-                                <li>
-                                    <a href="#" title="SHOP">SHOP</a>
+                                <li class="has_children">
+                                    <a href="#" title="SHOP">MENU</a>
                                     <ul class="sub_menu">
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
-                                                                                <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
+                                                                                <li><a title="" href="#">Menu level 1</a></li>
                                                                             </ul>
                                 </li>
                                                                 <li>
